--- a/03_Unlimited_Color/style.css
+++ b/03_Unlimited_Color/style.css
@@ -1,9 +1,9 @@
 body{
     background-color: #414141;
     color: aliceblue;
+    text-align: center;
 }
 button{
-    margin-left: 35px;
     border-radius: 10px;
     padding: 5px 15px;
 }
