--- a/03_Unlimited_Color/style.css
+++ b/03_Unlimited_Color/style.css
@@ -1,7 +1,7 @@
 body{
-    background-color: #414141;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     text-align: center;
+    margin-top: 13%;
 }
 button{
     border-radius: 10px;
